# projectCSV

./: .coverage  .gitignore  README.md  cli.py  main.py  profiler.py  pyproject.toml  reader.py  transformer.py  validators.py
test_scripts/: reader_test.py
test_scripts/reader_scripts/: test_reader1.csv  test_reader3.xlsx
tests/: test_cli_integration.py  test_profiler.py  test_reader.py  test_setup.py  test_transformer.py  test_validators.py
